# catcord

./: .gitignore  .restyled.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: actionembed.yml  codeql-analysis.yml  deploy-backend.yml  deploy-frontend.yml  lint-test-backend.yml  lint-test-frontend.yml  lint-test.yml  testing-pytest.yml
backend/: .flake8  Dockerfile  __init__.py  __main__.py  init.sql  main.py  pyproject.toml
backend/core/: actions.py  config.py  logger.py
backend/db/: crud.py  tasks.py
backend/endpoints/: messages.py  servers.py  token.py
backend/routers/: messages.py  token.py
backend/src/: main.py  schemas.py
catcord/: __init__.py  __main__.py
catcord/db/: tasks.py
docs/: docusaurus.config.js  sidebars.js
docs/docs/: intro.md
documentation/: docusaurus.config.js  package.json  sidebars.js  wrangler.toml
documentation/blog/: welcome.md
documentation/docs/: intro.md  token.md
documentation/workers-site/: index.js  package.json
frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  babel.config.js  config.js  package.json  tsconfig.json  webpack.config.js  wrangler.toml
frontend/pages/: _app.tsx  index.tsx
frontend/public/: index.html
frontend/src/: App.tsx  index.html  router.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/styles/: globals.sass  reset.sass
tests/: test_catcord.py
web/: docusaurus.config.js  package.json  sidebars.js  wrangler.toml
web/blog/: 2019-05-28-hola.md  welcome.md
(+29 files in other folders)
