[tool.poetry]
name = "catcord"
version = "0.1.0"
description = ""
authors = ["Cat Developer Group"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
black = "^21.6b0"
uvicorn = "^0.14.0"
flake8 = "^3.9.2"
asyncpg = "^0.23.0"
gunicorn = "^20.1.0"
starlette = "^0.14.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
